@@ -20,6 +20,7 @@
 #include <qvbox.h>
 #include <qwidgetstack.h>
 
+#include "capitaldivisionasker.h"
 #include "flagdivisionasker.h"
 #include "kgeography.h"
 #include "settings.h"
@@ -42,6 +43,7 @@ kgeography::kgeography() : KMainWindow()
 	p_currentMap -> setAlignment(AlignCenter);
 	p_consult = new KPushButton(i18n("&Browse the map"), holder);
 	p_askMap = new KPushButton(i18n("&Click division in the map"), holder);
+	p_askCapitals = new KPushButton(i18n("Guess division from its &capital"), holder);
 	p_askFlags = new KPushButton(i18n("&Guess division from its flag"), holder);
 	
 	p_goToMenu = new KAction(i18n("&Go to menu"), 0, this, SLOT(goToMenu()), actionCollection(), "goToMenu");
@@ -49,6 +51,7 @@ kgeography::kgeography() : KMainWindow()
 	
 	connect(p_consult, SIGNAL(clicked()), this, SLOT(consult()));
 	connect(p_askMap, SIGNAL(clicked()), this, SLOT(askMap()));
+	connect(p_askCapitals, SIGNAL(clicked()), this, SLOT(askCapitals()));
 	connect(p_askFlags, SIGNAL(clicked()), this, SLOT(askFlags()));
 	
 	setCentralWidget(p_stack);
@@ -110,6 +113,18 @@ void kgeography::consult()
 {
 	p_askWidget = new mapAsker(p_stack, p_map, false);
 	putAskWidget();
+}
+
+void kgeography::askCapitals()
+{
+	int i;
+	bool ok;
+	i = KInputDialog::getInteger(i18n("Number of questions"), i18n("How many questions do you want? (1 to %1)").arg(p_map -> count()), 1, 1, p_map -> count(), 1, &ok);
+	if (ok)
+	{
+		p_askWidget = new capitalDivisionAsker(p_stack, p_map, i);
+		putAskWidget();
+	}
 }
 
 void kgeography::askMap()
