@@ -1,3 +1,7 @@
+2004-05-08  Albert Astals Cid  <tsdgeos@terra.es>
+	* Add Capital -> Division asker
+	* Privatize a method
+
 2004-05-06  Albert Astals Cid  <tsdgeos@terra.es>
 	* Fix gcc 3.4 compile error
 	* Add capitals for africa map
